Product List and Product Detail
- Product Detail is removed from the top bar.
- Product List is working properly.
- Product Detail is working properly.

--- a/css/style.css
+++ b/css/style.css
@@ -1290,6 +1290,7 @@ h2 {
 /********** Sidebar CSS ***********/
 /**********************************/
 .sidebar-widget {
+    margin-left: initial;
     padding: 30px;
     background: #ffffff;
 }
